--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="blog_style.css">
+    <title>Jorgexyx Blog</title>
+  </head>
+  <body>
+
+    <div class="header">
+      <div class="header--content">
+        <h1>Continuous Sushi</h1>
+        <div class="navbar">
+          <a href="/page/posts" href="posts page link">posts</a>
+          <a href-"/page/about" href="about page link">about</a>
+          <a href="/page/contact" href="contact page link">contact</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="page">
+      <div class="sidebar">
+        <div class="image">
+          <img src="images/profile.jpeg" alt="profile photo"/>
+        </div>
+        <p>Software Engineer with a interest in, machine learning, computer vision, simulations, physics. </p>
+        <div class="divider"></div>
+        <p class="quote">/**<br />* What I cannot create,<br />* I do not understand<br />* -- Richard Ferymann<br />**/</p>
+        <div class="divider"></div>
+        <div class="socials">
+          <a href="https://twitter.com">
+            <img alt="twitter link" src="images/icons/twitter.png"></img>
+          </a>
+          <a href="https://www.linkedin.com/in/jorge-bautista-194675139/">
+            <img alt="linkedin link" src="images/icons/linkedin.png"></img>
+          </a>
+          <a href="https://github.com/Jorgexyx/">
+            <img alt="github link" src="images/icons/github.png"></img>
+          </a>
+          <a href="https://www.instagram.com/jorge_finite/">
+            <img alt="insta link" src="images/icons/insta.png"></img>
+          </a>
+        </div>
+      </div>
+      <div class="page-content">
+          contrent
+      </div>
+    </div>
+  </body>
+</html>
+
