--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <div class="header--content">
         <h1>Continuous Sushi</h1>
         <div class="navbar">
-          <a href="/page/posts" href="posts page link">posts</a>
-          <a href-"/page/about" href="about page link">about</a>
-          <a href="/page/contact" href="contact page link">contact</a>
+          <a href="/" href="home page link">Home</a>
+          <a href-"/page/about" href="about page link">About</a>
+          <a href="/page/contact" href="contact page link">Contact</a>
         </div>
       </div>
     </div>
