--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <p>Software Engineer with a interest in, machine learning, computer vision, simulations, physics. </p>
         <div class="divider"></div>
-        <p class="quote">/**<br />* What I cannot create,<br />* I do not understand<br />* -- Richard Ferymann<br />**/</p>
+        <p class="quote">/**<br />* What I cannot create,<br />* I do not understand<br />* -- Richard Fenymann<br />**/</p>
         <div class="divider"></div>
         <div class="socials">
           <a href="https://twitter.com">
