--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="blog_style.css">
+    <link rel="stylesheet" href="/blog_style.css">
     <title>Jorgexyx Blog</title>
   </head>
   <body>
@@ -28,16 +28,16 @@
         <div class="divider"></div>
         <div class="socials">
           <a href="https://twitter.com">
-            <img alt="twitter link" src="images/icons/twitter.png"></img>
+            <img alt="twitter link" src="/images/icons/twitter.png"></img>
           </a>
           <a href="https://www.linkedin.com/in/jorge-bautista-194675139/">
-            <img alt="linkedin link" src="images/icons/linkedin.png"></img>
+            <img alt="linkedin link" src="/images/icons/linkedin.png"></img>
           </a>
           <a href="https://github.com/Jorgexyx/">
-            <img alt="github link" src="images/icons/github.png"></img>
+            <img alt="github link" src="/images/icons/github.png"></img>
           </a>
           <a href="https://www.instagram.com/jorge_finite/">
-            <img alt="insta link" src="images/icons/insta.png"></img>
+            <img alt="insta link" src="/images/icons/insta.png"></img>
           </a>
         </div>
       </div>
